infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cvwonder-studio
  labels:
    app: cvwonder-studio
spec:
  type: ClusterIP
  selector:
    app: cvwonder-studio
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
